--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://dancars.herokuapp.com/",
+  "proxy": "https://dancars.herokuapp.com",
   "name": "oauthpractice",
   "version": "0.1.0",
   "private": true,
@@ -25,6 +25,7 @@
     "serve": "^11.3.2"
   },
   "scripts": {
+    "client": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
