--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "npm start --prefix server",
     "server": "nodemon index --prefix server",
     "build": "react-scripts build",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run start --prefix client && npm run client --prefix client"
   },
   "repository": {
     "type": "git",
