--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "server": "nodemon server.js",    
     "client": "npm run client --prefix ../client",
     "client-install": "npm install --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
