--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "build":"cd client && npm run build",
-    "install-client": "cd client && npm install",
     "server": "nodemon server.js",    
     "client": "npm run client --prefix ../client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":"npm run install-client && npm run build"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
