--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Built to practice front-end skills as well as OAuth, and MongoDB.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",   
-    
-    "start": "node server.js --prefix server", 
+    "test": "echo \"Error: no test specified\" && exit 1",    
+    "start": "npm start--prefix server", 
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
