--- a/client/package.json
+++ b/client/package.json
@@ -25,9 +25,8 @@
     "serve": "^11.3.2"
   },
   "scripts": {
-    "client": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "build": "serve -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
