--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client-install":"npm install --prefix client",
     "start": "node server.js",
-    "build":"npm run build --prefix client",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client -- prefix client\""
+    "dev": "concurrently \"npm run server\" \"npm run client -- prefix client\"",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false node server.js"
   },
   "keywords": [],
   "author": "",
