--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client":"npm run client --prefix client",
-    "start": "concurrently \"node server.js\" \"npm run client -- prefix client\"",
+    "start":"node server.js",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client -- prefix client\"",
+    "dev": "concurrently \"npm run server\" \"npm run start -- prefix client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
   },
   "keywords": [],
