--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
   "bugs": {
     "url": "https://github.com/kyh8725/OAuth/issues"
   },
-  "homepage": "https://github.com/kyh8725/OAuth#readme"
+  "homepage": "https://dancars.herokuapp.com"
 }
