--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "npm run client --prefix ../client",
-    "client-install": "npm install --prefix client",
+    "client": "npm run client --prefix client",
     "start":"node server.js",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run start -- prefix client\""    
+    "dev": "concurrently \"npm run server\" \"npm run client -- prefix client\""    
   },
   "keywords": [],
   "author": "",
