--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "proxy": "https://dancars.herokuapp.com/",
   "name": "oauthpractice",
   "version": "0.1.0",
+  "homepage":"https://dancars.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
