--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "npm run client --prefix client",
-    "start":"node server.js",
+    "start":"concurrently \"node server.js\" \"npm start -- prefix client\"" ,
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client -- prefix client\""    
+    "dev": "concurrently \"npm run server\" \"npm run client -- prefix client\""  
   },
   "keywords": [],
   "author": "",
