--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"concurrently \"node server.js\" \"npm start -- prefix client\"" ,
+    "start":"node server.js && npm client --prefix client",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client -- prefix client\""  
+    "dev": "concurrently \"npm run server\" \"npm run start -- prefix client\""  
   },
   "keywords": [],
   "author": "",
