--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "https://dancars.herokuapp.com/",
   "name": "oauthpractice",
   "version": "0.1.0",
   "homepage":"https://dancars.herokuapp.com/",
