--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sports-cars",
   "version": "1.0.0",
+  "homepage":"https://dancars.herokuapp.com/",
   "description": "Built to practice front-end skills as well as OAuth, and MongoDB.",
   "main": "server.js",
   "scripts": {
