--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "npm start --prefix server",
+    "build": "react-scripts build",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
   },
   "repository": {
