--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,11 @@
   "main": "server.js",
   "scripts": {
     "client": "npm run client --prefix ../client",
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
