--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "sports-cars",
   "version": "1.0.0",
-  "homepage":"https://dancars.herokuapp.com/",
   "description": "Built to practice front-end skills as well as OAuth, and MongoDB.",
-  "main": "server.js",
-  "scripts": {
+  "main": "index.js",
+  "scripts": {    
+    "client": "npm start --prefix client",
     "start": "npm start --prefix server",
+    "server": "nodemon index --prefix server",
     "build": "react-scripts build",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
   },
   "repository": {
