--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm run client --prefix ../client",
     "client-install": "npm install --prefix client",
     "start": "node server.js",
