--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {  
     "client": "react-scripts start",
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
