--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,11 @@
     "react-fancybox": "^0.2.5",
     "react-magnific-popup": "^1.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "serve": "^11.3.2"
+    "react-scripts": "3.4.1"
   },
   "scripts": {  
-    "client": "react-scripts start",
-    "start": "serve -s build",
+    "client":"react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
