--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,13 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "homepage": "https://dansportscar.herokuapp.com/",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
-    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "client": "npm start --prefix ../client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -21,10 +18,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "helmet": "^4.0.0",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
