--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": { 
     "test": "echo \"Error: no test specified\" && exit 1",    
     "start": "npm start --prefix server",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix server npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
