--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "name": "sportscarapp",
   "version": "0.1.0",
   "private": true,
@@ -21,10 +21,11 @@
     "react-fancybox": "^0.2.5",
     "react-magnific-popup": "^1.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
