--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "client":"react-scripts start",
-    "start": "concurrently \"serve -s build\" \"react-scripts start\"",
+    "start": "concurrently \"npm run serve\" \"npm run client\"",
+    "serve":"serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
