--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "name": "sportscarapp",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
+    "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
@@ -24,9 +25,9 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "client":"react-scripts start",
+    "client": "react-scripts start",
     "start": "concurrently \"npm run serve\" \"npm run client\"",
-    "serve":"serve -s build",
+    "serve": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
