--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "npm run server && npm run client",
+    "start": "npm run client",
     "server": "serve -s build",
     "client": "react-scripts start",
     "build": "react-scripts build",
