--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"node server.js\" \"npm start --prefix ../client\"",
     "server": "nodemon server.js",
-    "client": "npm start --prefix ../client",
+    "client": "npm run client --prefix ../client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
